--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,10 @@
             <param-name>jersey.config.server.wadl.disableWadl</param-name>
             <param-value>true</param-value>
         </init-param>
+        <init-param>
+            <param-name>javax.persistence.provider</param-name>
+            <param-value>org.eclipse.persistence.jpa.PersistenceProvider</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
