--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>org.eclipse.persistence.jpa</artifactId>
-      <version>2.5.0</version>
+      <version>2.7.0</version>
       <!-- exclusions>
         <exclusion>
           <groupId>org.eclipse.persistence</groupId>
@@ -218,9 +218,9 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.ejb</groupId>
-      <artifactId>ejb-api</artifactId>
-      <version>3.0</version>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
     </dependency>
 
   </dependencies>
