--- a/.swagger-codegen-ignore
+++ b/.swagger-codegen-ignore
@@ -30,3 +30,10 @@ web.xml
 **/BuyerApiServiceImpl.java
 **/MarketApiServiceImpl.java
 **/SellerApiServiceImpl.java
+
+swagger
+target
+
+project.iml
+.gitignore
+.idea
