--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
-              <version>1.16.18</version>
+              <version>${org.projectlombok}</version>
             </path>
             <path>
               <groupId>org.mapstruct</groupId>
@@ -68,7 +68,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>${jetty-version}</version>
+        <version>9.4.7.v20170914</version>
         <configuration>
           <webApp>
             <contextPath>/</contextPath>
@@ -146,7 +146,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>${junit-version}</version>
+        <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -213,19 +213,19 @@
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
-      <version>10.13.1.1</version>
+      <version>${org.apache.derby}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derbyclient</artifactId>
-      <version>10.13.1.1</version>
+      <version>${org.apache.derby}</version>
     </dependency>
 
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.16.18</version>
+      <version>${org.projectlombok}</version>
       <scope>provided</scope>
     </dependency>
 
@@ -238,7 +238,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
+      <version>4.0.0</version>
     </dependency>
 
   </dependencies>
@@ -256,13 +256,14 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <swagger-core-version>1.5.16</swagger-core-version>
-    <jetty-version>9.2.9.v20150224</jetty-version>
-    <jersey2-version>2.22.2</jersey2-version>
+    <jersey2-version>2.26</jersey2-version>
     <jackson-version>2.9.2</jackson-version>
     <junit-version>4.12</junit-version>
     <logback-version>1.1.7</logback-version>
     <servlet-api-version>2.5</servlet-api-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <org.mapstruct.version>1.2.0.CR2</org.mapstruct.version>
+    <org.mapstruct.version>1.2.0.Final</org.mapstruct.version> <!-- final just releazed, waiting update in maven central -->
+    <org.apache.derby>10.13.1.1</org.apache.derby>
+    <org.projectlombok>1.16.18</org.projectlombok>
   </properties>
 </project>
