--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
     <dependency>
         <groupId>javax.validation</groupId>
         <artifactId>validation-api</artifactId>
-        <version>1.1.0.Final</version>
+        <version>2.0.0.Final</version>
         <!-- scope>provided</scope -->
     </dependency>
 
@@ -239,6 +239,13 @@
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>4.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>2.11.0</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
